--- a/src/NpgsqlExtend/NpgsqlExtend.csproj
+++ b/src/NpgsqlExtend/NpgsqlExtend.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Npgsql" Version="3.2.5" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\Shared\*.cs" />
+  </ItemGroup>
 </Project>
